# project-issue-report

./: .gitignore  README.md  docker-compose.yml
.kiro/specs/github-issue-comments-report/: requirements.md  spec.json
.kiro/steering/: product.md  structure.md  tech.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: __init__.py  test_main.py
frontend/: README.md  index.html
frontend/src/: App.css  App.tsx
