[project]
name = "project-issue-report-backend"
version = "0.1.0"
description = "FastAPI backend for project issue reporting"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.46",
    "psycopg[binary]>=3.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "httpx>=0.25.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
